filename alignment fixed

--- a/src/routes/TeachAndQA/components/styles.css
+++ b/src/routes/TeachAndQA/components/styles.css
@@ -135,12 +135,12 @@
 }
 
 .filename {
-    vertical-align: top;
+    vertical-align: middle;
     display: inline-block;
 }
 
 .filestatus {
-    vertical-align: top;
+    vertical-align: middle;
     display: inline-block;
 }
 
